--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-native": "0.66.1"
+    "react-mathjax": "^1.0.1",
+    "react-native": "0.66.1",
+    "react-native-mathjax": "^2.1.2",
+    "react-native-orientation": "^3.1.3",
+    "react-native-webview": "^11.14.2"
   },
   "devDependencies": {
     "@babel/core": "7.15.8",
